# FindToForge

./: README.md  Record.md
1_Conceptualization/: Conceptualization.md  Development_Modal.md
2_Planning/: Planning.md  links.md
3_Design/Mockups/style/: search.css  style.css
3_Design/Wireframes/: Raw_wireframe.free
4_Development/FindToForge_backend/: README.md  db.sqlite3  manage.py  pyproject.toml
4_Development/FindToForge_backend/Main_app/: urls.py  views.py
4_Development/FindToForge_backend/Main_app/templates/Main_app/: home.html
4_Development/FindToForge_backend/authSystem_app/: apps.py  forms.py  urls.py  views.py
4_Development/FindToForge_backend/authSystem_app/templates/authSystem_app/: login.html  register-test.html  register.html
4_Development/FindToForge_backend/findtoforge/: asgi.py  settings.py  urls.py  wsgi.py
